Fix membership first page button heights on mobile

--- a/page-builder-styles-membership.css
+++ b/page-builder-styles-membership.css
@@ -24,7 +24,7 @@
 }
 
 @media screen and (max-width: 400px) {
-  .en__field--NOT_TAGGED_5 label, .en__field--NOT_TAGGED_56 label, .en__field--NOT_TAGGED_57 label {
+  .en__field--NOT_TAGGED_5 label {
     line-height: 1.3em !important;
     min-height: 70px;
   }
